cookies alert z-index correction

--- a/src/scss/components/_cookies.scss
+++ b/src/scss/components/_cookies.scss
@@ -13,7 +13,7 @@
 	background: $white;
 	box-shadow: 0 28px 76px 0 rgba(37, 52, 50, 0.2);
 	border-radius: 4px;
-	z-index: 100;
+	z-index: 11;
 
 	@include respond-to(sm) {
 		bottom: 24px;
